# coxgraph

./: LICENSE  README.md  coxgraph_ssh.rosinstall
approxmvbb_catkin/: CMakeLists.txt  README.md  package.xml
approxmvbb_catkin/cmake/: extras.cmake.in
brisk/agast/: CMakeLists.txt  mainpage.dox  package.xml
brisk/agast/cmake/: export_flags.cmake
brisk/agast/include/agast/: agast5-8.h  (+6 more)
brisk/agast/src/: agast5-8-nms.cc  agast5-8.cc  agast7-12d-nms.cc  agast7-12d.cc  agast7-12s-nms.cc  agast7-12s.cc  ast-detector.cc  non-maximum-suppression.cc  oast9-16-nms.cc  oast9-16.cc
brisk/brisk/: CMakeLists.txt  brisk.ptn  package.xml
brisk/brisk/src/: brisk-descriptor-extractor.cc  brisk-feature-detector.cc  brisk-layer.cc  brisk-opencv.cc  brisk-scale-space.cc  brisk-v1.cc  brute-force-matcher.cc  camera-aware-feature.cc  harris-feature-detector.cc  harris-score-calculator-float.cc  harris-score-calculator.cc  harris-scores.cc  image-down-sampling.cc  opencv-ref.cc  pattern-provider.cc  test-cameras.cc  timer.cc  vectorized-filters.cc
brisk/brisk_ros_demo/: CMakeLists.txt  package.xml
brisk/brisk_ros_demo/src/: livedemo.cc
coxgraph/: .gitignore  CMakeLists.txt  package.xml
coxgraph/config/: coxgraph.rviz  coxgraph_client.yaml  evaluation_config.yaml  kinect.yaml  ncamera_sim_visensor.yaml  server.yaml  tsdf_recover.yaml  tsdf_server_default.yaml  xtion.yaml
coxgraph/config/asl_flights/: asl_config_0.yaml  rovio_equidist_cam0_p23022.yaml
coxgraph/config/euroc/: euroc_config_1.yaml
coxgraph/config/realsense/: rs_config_2.yaml  rs_config_5.yaml
coxgraph/config/vins/: vins_sim_agent_1.yaml  vins_sim_agent_2.yaml  vins_sim_agent_3.yaml
coxgraph/coxgraph/: CMakeLists.txt
coxgraph/coxgraph/config/: coxgraph_2.rviz  evaluation_config.yaml  ncamera_rs.yaml  server.yaml  tsdf_server_carla.yaml  tsdf_server_euroc.yaml  tsdf_server_rs.yaml
coxgraph/coxgraph/launch/: coxgraph_server.launch
coxgraph/coxgraph_mod/: CMakeLists.txt  package.xml
coxgraph/coxgraph_msgs/: package.xml
coxgraph/coxgraph_msgs/msg/: BoundingBox.msg
coxgraph/coxgraph_msgs/srv/: StateQuery.srv
coxgraph/launch/display/: coxgraph_rviz.launch
coxgraph/launch/euroc/: bag_recorder.launch  run_experiment_euroc.launch  tsdf_recover_test.launch  vins_client_euroc.launch
coxgraph/launch/utils/: pose_graph_backend.launch  vins_sim.launch
coxgraph/scripts/: start_mapping.sh
coxgraph/src/: coxgraph_client_node.cpp  coxgraph_server_node.cpp  tsdf_recover_node.cpp
coxgraph/src/client/: coxgraph_client.cpp
coxgraph/src/server/: client_handler.cpp  client_tf_optimizer.cpp  global_tf_controller.cpp  submap_collection.cpp
coxgraph_mod/: CMakeLists.txt
coxgraph_mod/include/coxgraph_mod/: loop_closure_publisher.h  tf_publisher.h  vio_interface.h
coxgraph_mod/src/: vio_interface.cpp
doxygen_catkin/: .gitignore  CMakeLists.txt
ethzasl_apriltag2/: CMakeLists.txt  README.md  package.xml
ethzasl_apriltag2/include/apriltags/: Tag16h5.h  Tag25h7.h  Tag25h9.h  Tag36h11.h  Tag36h11_other.h  Tag36h9.h
ethzasl_apriltag2/src/: GrayModel.cc
ethzasl_apriltag2/src/example/: apriltags_demo.cpp
node_evaluator/: CMakeLists.txt  LICENSE  README.md  node_evaluator.rosinstall  package.xml
node_evaluator/config/: example.yaml
node_evaluator/launch/: debug_coxgraph.launch  evaluate.launch  example_evaluation.launch
node_evaluator/launch/example_nodes/: talker_listener.launch
node_evaluator/msg/: Bandwidth.msg
node_evaluator/src/: eval_plotting.py  evaluator.py  evaluator_ros.py
opencv3_catkin/: CMakeLists.txt
pcl_catkin/pcl_catkin/: CMakeLists.txt  package.xml
pcl_catkin/pcl_catkin/cmake/: pcl-extras.cmake.in  pcl_find_sse.cmake
pose_graph_backend/: .gitignore  CMakeLists.txt  README.md  dependencies_https.rosinstall  dependencies_ssh.rosinstall  package.xml
pose_graph_backend/conf/: ncamera_23026.yaml  ncamera_sim_visensor.yaml  ncamera_v4rl0.yaml  pgbe_rviz.rviz
pose_graph_backend/include/: measurements.hpp  parameter-reader.hpp  parameters.hpp  publisher.hpp  subscriber.hpp  typedefs.hpp
pose_graph_backend/include/pose_graph_backend/: brisk-vocabulary.hpp  image-matching-algorithm.hpp  keyframe-database.hpp  keyframe.hpp  loop-detection.hpp  map.hpp  optimizer.hpp  system.hpp
pose_graph_backend/launch/: pgbe_rviz.launch  pose_graph_node.launch  pose_graph_node_euroc.launch  pose_graph_node_simulation.launch
pose_graph_backend/launch/bagfiles/: arche_play_0.launch  arche_play_1.launch  arche_play_2.launch  multi_agent_play_0.launch  multi_agent_play_1.launch  multi_agent_play_2.launch  multi_agent_play_3.launch  single_agent_play.launch
pose_graph_backend/launch/real_world/: pose_graph_node_arche.launch  pose_graph_node_outdoor.launch  pose_graph_node_outdoor_both.launch  pose_graph_node_outdoor_pegasus.launch  pose_graph_node_vicon.launch  pose_graph_node_vicon_ueli.launch
pose_graph_backend/src/: CameraPoseVisualization.cpp  parameter-reader.cpp  pose_graph_node.cpp  publisher.cpp  subscriber.cpp
pose_graph_backend/src/pose_graph_backend/: image-matching-algorithm.cpp  keyframe-database.cpp  keyframe.cpp  loop-detection.cpp  map.cpp  optimizer.cpp  system.cpp
robopt_open/: .gitignore  CMakeLists.txt  README.md  dependencies_https.rosinstall  dependencies_ssh.rosinstall  package.xml
robopt_open/src/imu-error/: preintegration-base.cpp  preintegration-factor.cpp
robopt_open/src/local-parameterization/: quaternion-local-param.cpp  quaternion-yaw-local-param.cpp
robopt_open/src/posegraph-error/: four-dof-between.cpp  relative-distance.cpp  six-dof-between.cpp
robopt_open/src/reprojection-error/: triangulation.cpp
suitesparse/system_suitesparse/: CMakeLists.txt  package.xml
suitesparse/system_suitesparse/cmake/: FindSUITESPARSE.cmake
vins_client_server/feature_tracker/: CMakeLists.txt  package.xml
vins_client_server/feature_tracker/src/: feature_tracker_node.cpp
vins_client_server/pose_graph/: CMakeLists.txt  package.xml
vpp_msgs/: CMakeLists.txt  package.xml
vpp_msgs/msg/: BoundingBox.msg
vpp_msgs/srv/: GetAlignedInstanceBoundingBox.srv  GetMap.srv
(+272 files in other folders)
