<?xml version="1.0"?>
<package format="2">
  <name>vpp_msgs</name>
  <version>1.0.0</version>
  <description>Message and service definitions for Voxblox++.</description>

  <author email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</author>

  <maintainer email="margarita.grinvald@mavt.ethz.ch">Margarita Grinvald</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
