<?xml version="1.0"?>
<package format="2">
  <name>brisk</name>
  <version>2.0.0</version>
  <description>The brisk lib</description>

  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="lestefan@ethz.ch">Stefan Leutenegger</maintainer>

  <license>New BSD</license>

  <author email="lestefan@ethz.ch">Stefan Leutenegger</author>
  <author email="slynen@ethz.ch">Simon Lynen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>agast</depend>
  <depend>cmake_modules</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
</package>
