<?xml version="1.0"?>
<package format="2">
  <name>brisk_ros_demo</name>
  <version>2.0.0</version>
  <description>The brisk ros demo package</description>

  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>
  <maintainer email="lestefan@ethz.ch">Stefan Leutenegger</maintainer>

  <license>New BSD</license>

  <author email="lestefan@ethz.ch">Stefan Leutenegger</author>
  <author email="slynen@ethz.ch">Simon Lynen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>agast</depend>
  <depend>brisk</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>opencv3_catkin</depend>
  <depend>roscpp</depend>
</package>
